# rust-kurs-tuebingen

./: Cargo.toml  bmi_file.txt  database.json
.github/workflows/: main.yml
.github/worklfows/: main.yml
src/: bmi.rs  clap_parser.rs  database.rs  errors.rs  height.rs  main.rs  serde.rs  test.rs  web.rs  weight.rs
templates/: entry_form.html  index.html  submit.html  submit_error.html
