[package]
name = "rust-kurs-tuebingen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
env_logger = "0.10.0"
float_eq = "1.0.0"
inquire = "0.6.2"
log = "0.4.17"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
time = {version = "0.3.21", features = ["serde", "local-offset"]}
